Fix erro to generate module folder
The vscode not activated the virtualenv context when run odoobin scaffold.
This fix add a new setting parameter 'pythonVirtualEnv' to user set the
local virtualenv python binary

--- a/package.json
+++ b/package.json
@@ -50,6 +50,12 @@
                         "description": "Set odoo-bin path",
                         "scope": "window"
                     },
+                    "odooScaffold.pythonVirtualEnv": {
+                        "type": "string",
+                        "default": "",
+                        "description": "Set Python from you virtualenv",
+                        "scope": "window"
+                    },
                     "odooScaffold.odooTemplatePath": {
                         "type": "string",
                         "default": "",
